# market-research-agent

./: .env.example  PRESENTATION.md  agent_stdio.py  application.py  extract_competitors.py  get_data.py  main.py  parse_competitors_correct.py  pyproject.toml  readme.MD  requirements.txt  research_state_grounding_logs.json  server.py  test_customer_mapping.py  test_working_api.py  uv run python agent_hosted.py
backend/: __init__.py  company_single_research.py
backend/classes/: __init__.py  state.py
backend/nodes/: briefing.py  competitor_analysis.py  curator.py  editor.py  enricher.py  grounding copy.py  grounding.py  market_collector.py  market_curator.py  orchestrator.py  swot_analysis.py  swot_analysis_agent.py  swot_analysis_base.py
backend/nodes/researchers/: __init__.py  base.py  company.py  competitor.py  consumer.py  customer_mapping.py  financial.py  industry.py  news.py  trend.py
backend/services/: __init__.py  mock_mongodb.py  mongodb.py  report_generator.py  websocket_manager.py  xai_aig_chat.py
backend/utils/: monitoring.py  settings.py
copilot/: .workspace
copilot/api/: manifest.yml
copilot/api/addons/: extra-task-roles-iam-policy.yml
copilot/environments/dev/: manifest.yml
ui/: package-lock.json  package.json  pnpm-lock.yaml
ui/src/: App.tsx  index.css
ui/src/components/: AgentErrorHandler.tsx  AnalysisTypeSelector.tsx  CompetitorAnalysis.tsx  ErrorBoundary.tsx  Header.tsx  LoadingState.tsx  LocationInput.tsx  MarketAnalysisForm.tsx  ReportViewer.tsx  ResearchForm.tsx  ResearchReport.tsx  ResearchStatus.tsx  ResultsDashboard.tsx  SharedReportViewer.tsx  ThreeCAnalysisProgress.md  ThreeCAnalysisProgress.tsx  index.ts
ui/src/hooks/: useSession.ts  useWebSocket.simple.ts
ui/src/types/: index.ts
ui/src/utils/: constants.ts  handlers.ts
(+5 files in other folders)
