[project]
name = "ai-challenge-market-research"
version = "0.1.0"
description = "Market research agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12.3",
    "fastapi[standard]",
    "openai-agents>=0.3.1",
    "python-dotenv>=1.1.1",
    "langchain-core",
    "langgraph",
    "openai",
    "pymongo",
    "reportlab",
    "uvicorn[standard]",
    "websockets",
    "google-generativeai",
    "tavily-python",
    "pydantic-settings>=2.10.1",
    "aiohttp>=3.12.15",
    "bs4>=0.0.2",
    "langchain-perplexity>=0.1.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "psutil>=7.1.0",
    "markdown>=3.9",
    "jinja2>=3.1.6",
]
